--- a/Ex1.css
+++ b/Ex1.css
@@ -9,6 +9,20 @@ header {
     color: white;
     padding: 30px 0;
     text-align: center;
+    position: relative;
+}
+
+.menu-mobile {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  background-color: crimson;
+  color: white;
+  opacity: 0;
+  transition: .3s ease-in-out;
+  pointer-events: none; 
+  z-index: 1;
 }
 
 header h1 {
@@ -21,11 +35,11 @@ header nav a {
     font-size: 20px;
     margin-right: 15px;
     margin-left: 15px;
-    transition: color .5s;
+    transition: color 0.5s;
 }
 
 header nav a:hover {
-    color: yellow;
+    color: rgb(212, 168, 36);
 }
 
 header nav {
@@ -38,7 +52,7 @@ footer {
     text-align: center;
     padding: 20px 0;
     font-size: 20px;
-    margin-top: 25px;
+    margin-top: 30px;
 }
 
 body {
@@ -59,9 +73,9 @@ main {
 }
 
 .noticia img {
-    width: 400px;
-    height: 0 150px;
-    border-radius: 20px;
+    width: 520px;
+    height: 250;
+    border-radius: 15px;
     object-fit: cover;
 }
 
@@ -79,29 +93,125 @@ main {
     margin-bottom: 20px;
 }
 
-.kratos {
+.noticia-filme-serie {
+    border-radius: 10px;
     width: 250px;
     object-fit: cover;
-    border-radius: 10px;
-    width: 200px;
     background-color: rgba(133, 40, 40, 0.814);
     padding: 20px 15px;
 }
 
-.kratos img{
-    width: 200px;
-    height: 140px;
-    border-radius: 9px;
+.noticia-filme-serie img{
+    width: 250px;
+    height: 150px;
+    border-radius: 10px;
     object-fit: cover;
 }
-.kratos h3 {
+.noticia-filme-serie h3 {
     margin-top: 15px;
     margin-bottom: 15px;
 }
 
-.KK {
+.container-noticias {
     border-radius: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.menu-mobile.menu-ativo {
+  max-height: 600px;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.icone-menu {
+    display: none;
+}
+
+
+  .noticia-filme-serie img {
+    width: 100%;
+  }
+
+
+@media (max-width:1000px) {
+main {
+    width: 80vw;
+}
+.noticia-filme-serie{
+    width: 27.5;
+}
+}
+
+@media (max-width:850px) {
+
+    .container-noticias {
+        flex-direction: column;
+        width: 94%;
+    }
+
+.noticia-filme-serie {
+    width: 100%;
+    margin-bottom: 25px;
+}
+
+.noticia img {
+    width: 85%;
+}
+}
+
+@media (max-width: 600px) {
+  
+  .icone-menu {
+    display: block;
+  }
+
+    header nav {
+        display: none;
+    }
+    
+    .menu-mobile nav{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .menu-mobile nav a{
+font-size: 20px;
+padding: 15px 0;
+border-bottom: 0.5px solid rgba(255, 255, 255, 0.536);
+    }
+
+    header h1 {
+font-size: 25px;
+text-align: left;
+    }
+
+    header {
+        padding: 20px 30px;
+    }
+
+    .header-mobile{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .header-mobile img:hover{
+        cursor: pointer;
+    }
+
+.header-mobile img{
+   width: 30px;
+}
+}
+
+@media (max-width: 500px) {
+    main {
+        width: 75vw;
+    }
+
+footer{
+    padding: 20px 15px;
+    font-size: 15px;
+}
 }
